Upgrade Broker Dashboard
Make navbar highlight the section the user is on
Begin layout of Broker Dashboard

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Code\BrokerDashboard\" />
     <Folder Include="Controllers\Database\Information\Table\Setting\" />
   </ItemGroup>
 
